<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_sheet_bg"
        tools:context=".view.fragments.BottomSheetFragment">

        <TextView
            android:id="@+id/tvMealType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/meal_type"
            android:textColor="@color/sheet_title_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/svMealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMealType">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgMealType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/chipMainCourse"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMainCourse"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSideDish"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDessert"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipAppetizer"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSalad"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBread"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bread" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBreakFast"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSoup"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soup" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBeverage"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beverage" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSauce"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauce" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMarinade"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marinade" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFingerFood"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finger_food" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSnack"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDrink"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drink" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvDietType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/diet_type"
            android:textColor="@color/sheet_title_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/svMealType" />

        <HorizontalScrollView
            android:id="@+id/svDietType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDietType">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgDietType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/chipGlutenFree"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipGlutenFree"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipKetogenic"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ketogenic" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVegetarian"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipVegan"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPescetarian"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPaleo"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paleo" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPrimal"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primal" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipWhole30"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whole30" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip"
                        style="@style/CustomChipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beverage" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/btnApplySheet"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_ripple_effect"
            android:text="Apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/svDietType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
